opam-version: "2.0"
name: "tezos_stats"
version: "0.0.0"
maintainer: ["elie.brami@epita.fr"]
authors: ["BRAMI Élie <elie.brami@epita.fr>"]
license: ["ISC"]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "cohttp" { "2.1.3" }
  "cohttp-lwt-unix" { "2.1.3" }
  "dune" {"1.10.0"}
  "lambda-term" { "2.0.1" }
  "lwt" { "4.2.1" }
  "ocplib-json-typed" { "0.7.1" }
  "ppx_deriving_yojson" { "3.5" }
  "utop" { "2.4.0" }
  "ocaml" { "4.7.1" }
  "ipaddr" { "2.9.0" }
]
